--- a/index.html
+++ b/index.html
@@ -13,38 +13,39 @@
     <script type="text/javascript" src="jsSrc/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="style/uunit%20-%201.css">
 </head>
 
 <body class="parallax ">
-    <!--NAVBAR START-->
-    <div class="navbar navbar-inverse navbar-twitch" role="navigation">
+   <nav class="navbar navbar-inverse  navbar-twitch" role="navigation">
+       
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <span class="small-nav"> <span class="logo">  </span> </span>
                     <span class="full-nav">SeqU</span>
                 </a>
             </div>
-            <div class="">
-                <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a href="#">
+            <div class="collapse navbar-collapse ">
+                <ul class="nav navbar-nav mr-auto">
+                    <li class=" nav-item active">
+                        <a href="index.html" class="nav-link">
                             <span class="small-nav" data-toggle="tooltip" data-placement="right" title="Home"> 
                                     <span class="glyphicon glyphicon-home"></span>
                             </span>
                             <span class="full-nav"> Home </span>
                         </a>
                     </li>
-                    <li>
-                        <a href="#about-us" disabled>
+                    <li class="nav-item">
+                        <a href="#about-us" disabled class="nav-link">
                             <span class="small-nav" data-toggle="tooltip" data-placement="right" title="About Us"> 
                                     <span class="fa fa-users"></span>
                             </span>
                             <span class="full-nav"> community (coming soon) </span>
                         </a>
                     </li>
-                    <li>
-                        <a href="#contact-us">
+                    <li class="nav-item">
+                        <a href="#contact-us" class="nav-link">
                             <span class="small-nav" data-toggle="tooltip" data-placement="right" title="Contact Us"> 
                                     <span class="glyphicon glyphicon-comment"></span>
                             </span>
@@ -54,29 +55,27 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <!--NAVBAR END-->
 
-    <h1 class="center" dir="rtl" style="color:White"> مرحبا بكم في SeqU</h1>
+</nav>
+
+    <h1 class="center" dir="rtl" style="color:#34A853"> مرحبا بكم في SeqU</h1>
     <br>
     <table width="70%" height="30%">
         <tr>
             <td align="center" id="td1">
-                <font size="6" color="white" >(قريبا)</font>
+                <font size="6" color="rgba(0, 91, 148,0.5);" >(قريبا)</font>
             </td>
             <td align="center" id="td2">
-                <font size="6" color="white"><a href="ch.html"> حل المعادلات </a></font>
+                <font size="6"  color="white"><a style="color:rgba(226, 240, 33,0.5);" href="ch.html"> حل المعادلات </a></font>
             </td>
         </tr>
     </table>
+  
+    <h3 dir="rtl" class="center" style="color: rgba(111,0,222,0.7);"> ماهو SeqU ؟</h3>
     <br>
-    <hr>
-    <br>
-    <h3 dir="rtl" class="center" style="color:White"> ماهو SeqU ؟</h3>
-    <br>
-    <div id="color-g">
+    <div >
     </div>
-    <p class="imgb center" style="color:#ffffff;font-size:38px;"> أو سكيو هو تطبيق ويب لحل معادلات كيمياء4 SeqU</p>
+    <p class="imgb center" style="color:rgba(111,0,222,0.7);font-size:38px;"> أو سكيو هو تطبيق ويب لحل معادلات كيمياء4 SeqU</p>
     <footer>
         <a href="http://github.com/CODE-12">
             <p>ALL RIGHT RESEVED&copy; TO CODE-12&reg;</p>
