--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <title>SeqU</title>
     <meta charset="utf-8" />
+    <meta name="keywords" content="sequ,SeqU,SEQU,SeN,CODE-12 Group,code12,code-12,Code-12,CODE-12,حل معادلات الكيمياء ,موقع سيكيو لحل المعادلات"/>
     <meta name="author" content="CODE-12 Group" />
-    <meta name="desciption" content="حل مسائل منهج كيمياء3" />
+    <meta name="desciption" content="حل مسائل منهج كيمياء4" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -44,14 +45,7 @@
                             <span class="full-nav"> community (coming soon) </span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#contact-us" class="nav-link">
-                            <span class="small-nav" data-toggle="tooltip" data-placement="right" title="Contact Us"> 
-                                    <span class="glyphicon glyphicon-comment"></span>
-                            </span>
-                            <span class="full-nav"> Contact Us </span>
-                        </a>
-                    </li>
+                  
                 </ul>
             </div>
         </div>
@@ -73,8 +67,7 @@
   
     <h3 dir="rtl" class="center" style="color: rgba(111,0,222,0.7);"> ماهو SeqU ؟</h3>
     <br>
-    <div >
-    </div>
+    
     <p class="imgb center" style="color:rgba(111,0,222,0.7);font-size:38px;"> أو سكيو هو تطبيق ويب لحل معادلات كيمياء4 SeqU</p>
     <footer>
         <a href="http://github.com/CODE-12">
