--- a/ph20.html
+++ b/ph20.html
@@ -25,17 +25,17 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="index.html">
                     <span class="small-nav"> <span class="logo">  </span> </span>
-                    <span class="full-nav">SeqU</span>
+                    <span class="full-nav " style="color:#6f00de;">SeqU</span>
                 </a>
             </div>
             <div class="">
                 <ul class="nav navbar-nav">
                     <li class="active">
                         <a href="index.html">
-                            <span class="small-nav" data-toggle="tooltip" data-placement="right" title="Home"> 
+                            <span class="small-nav " data-toggle="tooltip" data-placement="right" title="Home"> 
                                     <span class="glyphicon glyphicon-home"></span>
                             </span>
-                            <span class="full-nav"> Home </span>
+                            <span class="full-nav" style="color:#34A853;"> Home </span>
                         </a>
                     </li>
                     <li>
@@ -43,17 +43,10 @@
                             <span class="small-nav" data-toggle="tooltip" data-placement="right" title="About Us"> 
                                     <span class="fa fa-users"></span>
                             </span>
-                            <span class="full-nav"> community (coming soon) </span>
+                            <span class="full-nav " style="color:#FBBC05;"> community (coming soon) </span>
                         </a>
                     </li>
-                    <li>
-                        <a href="#contact-us">
-                            <span class="small-nav" data-toggle="tooltip" data-placement="right" title="Contact Us"> 
-                                    <span class="glyphicon glyphicon-comment"></span>
-                            </span>
-                            <span class="full-nav"> Contact Us </span>
-                        </a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
