--- a/ph3.html
+++ b/ph3.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/Ph3.css">
     <link rel="stylesheet" href="style/uunit%20-%201.css">
-    
-    <script type="text/javascript" src="jsSrc/index.js"></script>
+   
+    <script  src="jsSrc/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="jsSrc/chapter-thre.js"></script>
@@ -25,7 +25,7 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="index.html">
                     <span class="small-nav"> <span class="logo">  </span> </span>
-                    <span class="full-nav">SeqU</span>
+                    <span class="full-nav " style="color:#059ea6;">SeqU</span>
                 </a>
             </div>
             <div class="">
@@ -35,7 +35,7 @@
                             <span class="small-nav" data-toggle="tooltip" data-placement="right" title="Home"> 
                                     <span class="glyphicon glyphicon-home"></span>
                             </span>
-                            <span class="full-nav"> Home </span>
+                           <span class="full-nav " style="color:#6f00de;"> Home </span>
                         </a>
                     </li>
                     <li>
@@ -43,17 +43,10 @@
                             <span class="small-nav" data-toggle="tooltip" data-placement="right" title="About Us"> 
                                     <span class="fa fa-users"></span>
                             </span>
-                            <span class="full-nav"> community (coming soon) </span>
+                            <span class="full-nav" style="color:#34A853;"> community (coming soon) </span>
                         </a>
                     </li>
-                    <li>
-                        <a href="#contact-us">
-                            <span class="small-nav" data-toggle="tooltip" data-placement="right" title="Contact Us"> 
-                                    <span class="glyphicon glyphicon-comment"></span>
-                            </span>
-                            <span class="full-nav"> Contact Us </span>
-                        </a>
-                    </li>
+                   
                 </ul>
             </div>
         </div>
